--- a/assets/styles.css
+++ b/assets/styles.css
@@ -79,6 +79,7 @@ h1.title {
 	font-size: 2.4rem;
 	font-weight: 700;
 	text-align: center;
+	margin-left: 20px;
 }
 
 .col {
@@ -149,4 +150,117 @@ h1.title {
 
 .bg-gradient-orange {
 	background: linear-gradient(87deg, #6c757d 0, #8898aa 100%) !important;
+}
+
+.sidebar {
+	height: 100vh;
+	width: 0;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	left: 0;
+	background-color: #111;
+	overflow-x: hidden;
+	transition: 0.5s;
+	/* padding: 15% 0; */
+}
+
+.sidebar a {
+	/* margin-top: 20%; */
+	padding: 8px 8px 8px 32px;
+	text-decoration: none;
+	font-size: 32px;
+	color: #818181;
+	display: block;
+	transition: 0.3s;
+	text-align: left;
+}
+
+.sidebar a:hover {
+	color: #f1f1f1;
+}
+
+.sidebar .closebtn {
+	position: absolute;
+	top: 0;
+	right: 25px;
+	font-size: 36px;
+	margin-left: 50px;
+}
+
+.openbtn {
+	font-size: 20px;
+	cursor: pointer;
+	background-color: #111;
+	color: white;
+	padding: 10px 15px;
+	border: none;
+}
+
+.openbtn:hover {
+	background-color: #444;
+}
+
+#main {
+	transition: margin-left 0.5s;
+	padding: 16px;
+}
+#main button {
+	/* float: left; */
+	display: inline;
+}
+#main h1 {
+	/* float: right;
+	margin-left: 20px; */
+	display: inline;
+}
+/* .mystyle {
+	display: none;
+	width: 0 !important;
+	padding: 0 !important;
+} */
+.openNav {
+	display: block;
+	width: 100% !important;
+}
+.closeNav {
+	display: none;
+}
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media only screen and (min-width: 340px) {
+	.sidebar {
+		padding-top: 60%;
+	}
+	.sidebar a {
+		text-align: left;
+		margin-left: 25%;
+		font-size: 32px;
+	}
+}
+@media only screen and (min-width: 600px) {
+	.sidebar {
+		padding-top: 41%;
+	}
+	.sidebar a {
+		text-align: left;
+		margin-left: 25%;
+		font-size: 32px;
+	}
+}
+@media screen and (min-width: 740px) {
+	.sidebar {
+		padding-top: 30%;
+	}
+	.sidebar a {
+		font-size: 32px;
+		text-align: left;
+	}
+}
+@media screen and (min-width: 1007px) {
+	.sidebar {
+		padding-top: 18%;
+	}
+	.sidebar a {
+		font-size: 32px;
+	}
 }
