--- a/assets/styles.css
+++ b/assets/styles.css
@@ -264,3 +264,61 @@ h1.title {
 		font-size: 32px;
 	}
 }
+
+.topnav {
+	overflow: hidden;
+	background-color: transparent;
+	position: relative;
+	width: 100%;
+}
+
+.topnav a {
+	/* text-align: center; */
+	color: black;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 41px;
+	font-weight: 700;
+	display: block;
+	/* margin-right: 20px; */
+	/* width: 20%; */
+}
+
+.topnav a.icon {
+	background: black;
+	color: white;
+	display: block;
+	margin-top: 10px;
+	margin-left: 22px;
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+
+.topnav a:hover {
+	background-color: transparent;
+	color: black;
+}
+
+.topnav .active {
+	margin-left: 20% !important;
+}
+
+/* @media only screen and (min-width: 340px) {
+} */
+@media only screen and (min-width: 660px) {
+	.active {
+		font-size: 20px;
+		padding-top: 0 !important;
+	}
+}
+@media only screen and (min-width: 812px) {
+	.topnav .active {
+		margin-left: 28% !important;
+	}
+}
+@media only screen and (min-width: 1001px) {
+	.topnav .active {
+		margin-left: 33% !important;
+	}
+}
